; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/mux/extr_muxedit.c_AddDataToChunkList.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/mux/extr_muxedit.c_AddDataToChunkList.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WEBP_MUX_OK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32, i32, i32**)* @AddDataToChunkList to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @AddDataToChunkList(i32* %0, i32 %1, i32 %2, i32** %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32**, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32** %3, i32*** %9, align 8
  %12 = call i32 @ChunkInit(i32* %10)
  %13 = load i32*, i32** %6, align 8
  %14 = load i32, i32* %7, align 4
  %15 = load i32, i32* %8, align 4
  %16 = call i64 @ChunkAssignData(i32* %10, i32* %13, i32 %14, i32 %15)
  store i64 %16, i64* %11, align 8
  %17 = load i64, i64* %11, align 8
  %18 = load i64, i64* @WEBP_MUX_OK, align 8
  %19 = icmp ne i64 %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %4
  br label %30

21:                                               ; preds = %4
  %22 = load i32**, i32*** %9, align 8
  %23 = call i64 @ChunkSetHead(i32* %10, i32** %22)
  store i64 %23, i64* %11, align 8
  %24 = load i64, i64* %11, align 8
  %25 = load i64, i64* @WEBP_MUX_OK, align 8
  %26 = icmp ne i64 %24, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %21
  br label %30

28:                                               ; preds = %21
  %29 = load i64, i64* @WEBP_MUX_OK, align 8
  store i64 %29, i64* %5, align 8
  br label %33

30:                                               ; preds = %27, %20
  %31 = call i32 @ChunkRelease(i32* %10)
  %32 = load i64, i64* %11, align 8
  store i64 %32, i64* %5, align 8
  br label %33

33:                                               ; preds = %30, %28
  %34 = load i64, i64* %5, align 8
  ret i64 %34
}

declare dso_local i32 @ChunkInit(i32*) #1

declare dso_local i64 @ChunkAssignData(i32*, i32*, i32, i32) #1

declare dso_local i64 @ChunkSetHead(i32*, i32**) #1

declare dso_local i32 @ChunkRelease(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
